--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,14 @@
 <footer class="site-footer">
     <span class="site-footer-owner"><a href="https://github.com/OttoRobba/ox">Ox</a> is developed and maintained by <a href="https://github.com/OttoRobba">OttoRobba</a>.</span>
 </footer>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55865997-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
