Added documentation for setup, assets, canvas, and whatnot

--- a/stylesheets/highlight.css
+++ b/stylesheets/highlight.css
@@ -1,15 +1,22 @@
-.s1, s2 {
+.s1,
+.s2 {
     color: #a04eb4;
 }
 
-.c1, c2 {
-    color:#a2a2a2;
+.c1,
+.c2 {
+    color: #a2a2a2;
 }
 
-.kd, .k {
+.kd,
+.k {
     color: rgb(0, 128, 255);
 }
 
 .mi {
     color: #46a330;
+}
+
+.nx {
+    color: #3e3e3e;
 }
