More docs, css now done through less

--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -4,8 +4,11 @@
 {% include head.html %}
 
 <body>
-    {% include menu.html %}
-    {% include content.html %}
+  <div class="center">
+    {% include menu.html %} {% include content.html %} {% include footer.html %}
+
+  </div>
+
 </body>
 
 </html>
