--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,16 +4,17 @@
 {% include head.html %}
 
 <body>
-    <section class="page-header">
-        <h1 class="project-name">Ox</h1>
-        <h2 class="project-tagline">A tiny 2D game framework for the web.</h2>
-        <a href="https://github.com/OttoRobba/ox" class="btn">View on GitHub</a>
-        <a href="https://github.com/OttoRobba/ox/zipball/master" class="btn">Download .zip</a>
-        <a href="https://github.com/OttoRobba/ox/tarball/master" class="btn">Download .tar.gz</a>
-    </section>
+  <section class="page-header">
+    <h1 class="project-name">Ox</h1>
+    <h2 class="project-tagline">A tiny 2D game framework for the web.</h2>
+    <a href="https://github.com/OttoRobba/ox" class="btn">View on GitHub</a>
+    <a href="https://github.com/OttoRobba/ox/zipball/master" class="btn">Download .zip</a>
+    <a href="https://github.com/OttoRobba/ox/tarball/master" class="btn">Download .tar.gz</a>
+  </section>
+  <div class="center">
+    {% include content.html %}{% include footer.html %}
+  </div>
 
-    {% include menu.html%}
-    {% include content.html %}
 </body>
 
 </html>
