--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,4 +1,5 @@
-<section class="main-content">
-    {% if page.title != null %}<h1>{{page.title}}</h1>{% endif %}
-    {{content}} {% include footer.html %}
+<section {% if page.url == '/index.html' %} class="main-content home" {% else %}class="main-content" {% endif %}>
+  {% if page.title != null %}
+  <h1>{{page.title}}</h1>{% endif %}
+  {{content}}
 </section>
