--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,20 +1,3 @@
-* {
-  box-sizing: border-box; }
-
-body {
-  padding: 0;
-  margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #606c71; }
-
-a {
-  color: #1e6bb8;
-  text-decoration: none; }
-  a:hover {
-    text-decoration: underline; }
-
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
@@ -24,104 +7,68 @@ a {
   border-style: solid;
   border-width: 1px;
   border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-  .btn + .btn {
-    margin-left: 1rem; }
-
+  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+}
+.btn + .btn {
+  margin-left: 1rem;
+}
 .btn:hover {
   color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
-
+  border-color: rgba(255, 255, 255, 0.3);
+}
 @media screen and (min-width: 64em) {
   .btn {
-    padding: 0.75rem 1rem; } }
-
+    padding: 0.75rem 1rem;
+  }
+}
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .btn {
     padding: 0.6rem 0.9rem;
-    font-size: 0.9rem; } }
-
+    font-size: 0.9rem;
+  }
+}
 @media screen and (max-width: 42em) {
   .btn {
     display: block;
     width: 100%;
     padding: 0.75rem;
-    font-size: 0.9rem; }
-    .btn + .btn {
-      margin-top: 1rem;
-      margin-left: 0; } }
-
-.page-header {
-  color: #fff;
-  text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
-
-@media screen and (min-width: 64em) {
-  .page-header {
-    padding: 5rem 6rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .page-header {
-    padding: 3rem 4rem; } }
-
-@media screen and (max-width: 42em) {
-  .page-header {
-    padding: 2rem 1rem; } }
-
-.project-name {
+    font-size: 0.9rem;
+  }
+  .btn + .btn {
+    margin-top: 1rem;
+    margin-left: 0;
+  }
+}
+.main-content:first-child {
   margin-top: 0;
-  margin-bottom: 0.1rem; }
-
-@media screen and (min-width: 64em) {
-  .project-name {
-    font-size: 3.25rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .project-name {
-    font-size: 2.25rem; } }
-
-@media screen and (max-width: 42em) {
-  .project-name {
-    font-size: 1.75rem; } }
-
-.project-tagline {
-  margin-bottom: 2rem;
-  font-weight: normal;
-  opacity: 0.7; }
-
-@media screen and (min-width: 64em) {
-  .project-tagline {
-    font-size: 1.25rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .project-tagline {
-    font-size: 1.15rem; } }
-
-@media screen and (max-width: 42em) {
-  .project-tagline {
-    font-size: 1rem; } }
-
-.main-content :first-child {
-  margin-top: 0; }
+}
 .main-content img {
-  max-width: 100%; }
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+  max-width: 100%;
+}
+.main-content h1,
+.main-content h2,
+.main-content h3,
+.main-content h4,
+.main-content h5,
+.main-content h6 {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #159957;
+}
 .main-content p {
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
+}
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 0.9rem;
   color: #383e41;
   background-color: #f3f6fa;
-  border-radius: 0.3rem; }
+  border-radius: 0.3rem;
+}
 .main-content pre {
   padding: 0.8rem;
   margin-top: 0;
@@ -131,28 +78,35 @@ a {
   word-wrap: normal;
   background-color: #f3f6fa;
   border: solid 1px #dce6f0;
-  border-radius: 0.3rem; }
-  .main-content pre > code {
-    padding: 0;
-    margin: 0;
-    font-size: 0.9rem;
-    color: #567482;
-    word-break: normal;
-    white-space: pre;
-    background: transparent;
-    border: 0; }
+  border-radius: 0.3rem;
+}
+.main-content pre > code {
+  padding: 0;
+  margin: 0;
+  font-size: 0.9rem;
+  color: #567482;
+  word-break: normal;
+  white-space: pre;
+  background: transparent;
+  border: 0;
+}
 .main-content .highlight {
-  margin-bottom: 1rem; }
-  .main-content .highlight pre {
-    margin-bottom: 0;
-    word-break: normal; }
-.main-content .highlight pre, .main-content pre {
+  margin-bottom: 1rem;
+}
+.main-content .highlight pre {
+  margin-bottom: 0;
+  word-break: normal;
+}
+.main-content .highlight pre,
+.main-content pre {
   padding: 0.8rem;
   overflow: auto;
   font-size: 0.9rem;
   line-height: 1.45;
-  border-radius: 0.3rem; }
-.main-content pre code, .main-content pre tt {
+  border-radius: 0.3rem;
+}
+.main-content pre code,
+.main-content pre tt {
   display: inline;
   max-width: initial;
   padding: 0;
@@ -161,75 +115,267 @@ a {
   line-height: inherit;
   word-wrap: normal;
   background-color: transparent;
-  border: 0; }
-  .main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
-    content: normal; }
-.main-content ul, .main-content ol {
-  margin-top: 0; }
+  border: 0;
+}
+.main-content pre code:before,
+.main-content pre code:after,
+.main-content pre tt:before,
+.main-content pre tt:after {
+  content: normal;
+}
+.main-content ul,
+.main-content ol {
+  margin-top: 0;
+}
 .main-content blockquote {
   padding: 0 1rem;
   margin-left: 0;
   color: #819198;
-  border-left: 0.3rem solid #dce6f0; }
-  .main-content blockquote > :first-child {
-    margin-top: 0; }
-  .main-content blockquote > :last-child {
-    margin-bottom: 0; }
-
+  border-left: 0.3rem solid #dce6f0;
+}
+.main-content blockquote > :first-child {
+  margin-top: 0;
+}
+.main-content blockquote > :last-child {
+  margin-bottom: 0;
+}
 .main-content dl {
-  padding: 0; }
-  .main-content dl dt {
-    padding: 0;
-    margin-top: 1rem;
-    font-size: 1rem;
-    font-weight: bold; }
-  .main-content dl dd {
-    padding: 0;
-    margin-bottom: 1rem; }
+  padding: 0;
+}
+.main-content dl dt {
+  padding: 0;
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+}
+.main-content dl dd {
+  padding: 0;
+  margin-bottom: 1rem;
+}
 .main-content hr {
   height: 2px;
   padding: 0;
   margin: 1rem 0;
   background-color: #eff0f1;
-  border: 0; }
-
+  border: 0;
+}
 @media screen and (min-width: 64em) {
   .main-content {
     max-width: 64rem;
-    padding: 2rem 6rem;
+    padding: 2rem 6rem 2rem 0;
     margin: 0 auto;
-    font-size: 1.1rem; } }
-
+    font-size: 1.1rem;
+    float: left;
+    width: 60%;
+  }
+}
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .main-content {
-    padding: 2rem 4rem;
-    font-size: 1.1rem; } }
-
+    padding: 2rem 4rem 2rem 0;
+    font-size: 1.1rem;
+    margin: 0 auto;
+    float: left;
+    width: 75%;
+  }
+}
 @media screen and (max-width: 42em) {
   .main-content {
     padding: 2rem 1rem;
-    font-size: 1rem; } }
-
+    margin-left: 16px;
+    font-size: 1rem;
+    float: left;
+    width: 60%;
+  }
+}
+.main-content li {
+  list-style: none;
+}
+.main-content code {
+  background-color: #E1C9ED;
+}
+@media screen and (min-width: 64em) {
+  .center {
+    left: 20%;
+    position: relative;
+    width: 80%;
+  }
+}
+.home {
+  width: 80%;
+  padding: 0 10%;
+}
 .site-footer {
+  clear: both;
   padding-top: 2rem;
-  margin-top: 2rem;
-  border-top: solid 1px #eff0f1; }
-
+  margin: 2rem 0;
+  border-top: dashed 1px #eff0f1;
+  width: 80%;
+}
 .site-footer-owner {
   display: block;
-  font-weight: bold; }
-
+  font-weight: bold;
+}
 .site-footer-credits {
-  color: #819198; }
-
+  color: #819198;
+}
 @media screen and (min-width: 64em) {
   .site-footer {
-    font-size: 1rem; } }
-
+    font-size: 1rem;
+  }
+}
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .site-footer {
-    font-size: 1rem; } }
-
+    font-size: 1rem;
+  }
+}
 @media screen and (max-width: 42em) {
   .site-footer {
-    font-size: 0.9rem; } }
+    font-size: 0.9rem;
+  }
+}
+.s1,
+.s2 {
+  color: #a04eb4;
+}
+.c1,
+.c2 {
+  color: #a2a2a2;
+}
+.kd,
+.k {
+  color: #0080ff;
+}
+.mi {
+  color: #46a330;
+}
+.nx {
+  color: #3e3e3e;
+}
+.page-header {
+  color: #fff;
+  text-align: center;
+  height: 100%;
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #155799, #159957);
+}
+@media screen and (min-width: 64em) {
+  .page-header {
+    padding: 5rem 6rem;
+  }
+}
+@media screen and (min-width: 42em) and (max-width: 64em) {
+  .page-header {
+    padding: 3rem 4rem;
+  }
+}
+@media screen and (max-width: 42em) {
+  .page-header {
+    padding: 2rem 1rem;
+  }
+}
+.project-name {
+  margin-top: 0;
+  margin-bottom: 0.1rem;
+}
+@media screen and (min-width: 64em) {
+  .project-name {
+    font-size: 3.25rem;
+  }
+}
+@media screen and (min-width: 42em) and (max-width: 64em) {
+  .project-name {
+    font-size: 2.25rem;
+  }
+}
+@media screen and (max-width: 42em) {
+  .project-name {
+    font-size: 1.75rem;
+  }
+}
+.project-tagline {
+  margin-bottom: 2rem;
+  font-weight: normal;
+  opacity: 0.7;
+}
+@media screen and (min-width: 64em) {
+  .project-tagline {
+    font-size: 1.25rem;
+  }
+}
+@media screen and (min-width: 42em) and (max-width: 64em) {
+  .project-tagline {
+    font-size: 1.15rem;
+  }
+}
+@media screen and (max-width: 42em) {
+  .project-tagline {
+    font-size: 1rem;
+  }
+}
+.sidebar {
+  overflow: hidden;
+  float: left;
+  margin: 32px 16px 0 16px;
+}
+.sidebar ul,
+.sidebar ul li a {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #585858;
+  width: 100%;
+}
+.sidebar ul li a:hover,
+.sidebar ul li li a:hover {
+  text-decoration: none;
+  color: #a078f2;
+}
+.dropdown {
+  margin-bottom: 16px;
+}
+.sub {
+  padding: 0 6px 0 12px;
+  margin-left: 2px;
+  border-left: 1px dotted #b6ccd8;
+  background-color: #fff;
+  width: 100%;
+  font-size: 0.9em;
+  color: #807793;
+  font-weight: normal;
+}
+.sub:hover {
+  border-left: 2px solid #6b4cac;
+  background-color: #eff4f7;
+  padding: 0 6px 0 11px;
+}
+@media screen and (max-width: 42em) {
+  .sidebar {
+    overflow: hidden;
+    float: right;
+    width: 100%;
+    padding: 0 0 0 32px;
+  }
+  .main-content {
+    float: left;
+    width: 100%;
+    margin: 0;
+  }
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #606c71;
+}
+a {
+  color: #1e6bb8;
+  text-decoration: none;
+}
+a:hover {
+  color: #2f7cc9;
+}
