Documentation beta for v0.2.0

--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -5,10 +5,10 @@
 
 <body>
   <div class="center">
-    {% include menu.html %} {% include content.html %} {% include footer.html %}
+    {% include menu.html %} {% include content.html %}
 
   </div>
-
+{% include footer.html %}
 </body>
 
 </html>
