--- a/_less/footer.less
+++ b/_less/footer.less
@@ -2,8 +2,8 @@
   clear: both;
   padding-top: 2rem;
   margin: 2rem 0;
-  border-top: dashed 1px #eff0f1;
-  width: 80%;
+  border-top: dotted 1px rgba(239, 240, 241, 0.38);
+    text-align: center;
 }
 
 .site-footer-owner {
