--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,4 +1,4 @@
-<section {% if page.url == '/index.html' %} class="main-content home" {% else %}class="main-content" {% endif %}>
+<section {% if page.url != '/index.html' %} class="main-content" {% endif %}>
   {% if page.title != null %}
   <h1>{{page.title}}</h1>{% endif %}
   {{content}}
