--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <title>ox - {{page.title}}</title>
+  <title>ox{% if page.title != null %} - {{page.title}}{% endif %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/stylesheets/normalize.css" media="screen">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
