--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,16 +5,20 @@
 
 <body>
   <section class="page-header">
-    <h1 class="project-name">Ox</h1>
+    <h1 class="project-name">ox</h1>
     <h2 class="project-tagline">A tiny 2D game framework for the web.</h2>
-    <a href="https://github.com/OttoRobba/ox" class="btn">View on GitHub</a>
     <a href="https://github.com/OttoRobba/ox/zipball/master" class="btn">Download .zip</a>
-    <a href="https://github.com/OttoRobba/ox/tarball/master" class="btn">Download .tar.gz</a>
-  </section>
-  <div class="center">
-    {% include content.html %}{% include footer.html %}
-  </div>
+    <a href="/docs/" class="btn">Documentation</a>
+    <a href="https://github.com/OttoRobba/ox" class="btn">View on GitHub</a>
+      <script src="/ox.js"></script>
+            <div class="cellphone">
+                <canvas id="canvas" class="canvas" width="524px" height="319px">
+                </canvas>
+            </div>
+            <div class="centered">
+        {% include content.html %}{% include footer.html %}</div>
 
+  </section>
 </body>
 
 </html>
