--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
     <h1 class="project-name">ox</h1>
     <h2 class="project-tagline">A tiny 2D game framework for the web.</h2>
     <a href="https://github.com/OttoRobba/ox/zipball/master" class="btn">Download .zip</a>
-    <a href="/docs/" class="btn">Documentation</a>
+    <a href="http://ottorobba.github.io/ox/docs/" class="btn">Documentation</a>
     <a href="https://github.com/OttoRobba/ox" class="btn">View on GitHub</a>
       <script src="/ox.js"></script>
             <div class="cellphone">
