--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-    <span class="site-footer-owner"><a href="https://github.com/OttoRobba/ox">Ox</a> is developed and maintained by <a href="https://github.com/OttoRobba">OttoRobba</a>.</span>
+    <span class="site-footer-owner"><a href="https://github.com/ThaisRobba/ox">Ox</a> is developed and maintained by <a href="https://github.com/ThaisRobba">Thais Robba</a>.</span>
 </footer>
 
 <script>
